[gd_scene load_steps=11 format=3 uid="uid://bcqslh1vhjn2m"]

[ext_resource type="Theme" uid="uid://o6kgdamtgf5g" path="res://Scenes/UI/Journal/Journal.tres" id="1_s3mq2"]
[ext_resource type="Script" path="res://Scripts/UI/Journal.gd" id="2_eyc3n"]
[ext_resource type="Script" path="res://Scripts/UI/Beastiary.gd" id="3_j8icn"]
[ext_resource type="Texture2D" uid="uid://dsxjxmjexlgfd" path="res://Art/UI/Journal/Codex/temp1.png" id="4_1wch5"]
[ext_resource type="Script" path="res://Scripts/UI/UI_Resources/BeastiaryEntry.gd" id="4_2k6mo"]
[ext_resource type="Texture2D" uid="uid://dggr1vfpw543t" path="res://Art/UI/Journal/Codex/temp2.png" id="6_2ir41"]
[ext_resource type="Texture2D" uid="uid://dgpxn4ip21ekv" path="res://Art/UI/Journal/Codex/Eva 100px.png" id="7_j84jf"]

[sub_resource type="Resource" id="Resource_7w0q1"]
script = ExtResource("4_2k6mo")
beast_picture = ExtResource("4_1wch5")
beast_name = "Ghost Dude"
seen = true
beast_description = "A dude with very interesting look"

[sub_resource type="Resource" id="Resource_lwp2q"]
script = ExtResource("4_2k6mo")
beast_picture = ExtResource("6_2ir41")
beast_name = "Wings"
seen = true
beast_description = "Super can fly he loves attraction."

[sub_resource type="Resource" id="Resource_1ot4o"]
script = ExtResource("4_2k6mo")
beast_picture = ExtResource("7_j84jf")
beast_name = "Eva Beatrice"
seen = true
beast_description = "Beatrice the golden witch bornt by Ushiromiya Eva's youth"

[node name="Journal" type="Control"]
layout_mode = 3
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_s3mq2")
script = ExtResource("2_eyc3n")

[node name="TabBar" type="TabBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.239
anchor_bottom = 0.061
offset_left = 2.0
offset_top = 3.0
offset_right = 0.263992
offset_bottom = -0.136002
tab_count = 3
tab_0/title = "Recap"
tab_1/title = "Quests"
tab_2/title = "Beastiary"

[node name="JournalMainFrame" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.055
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="JournalMainFrame"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="JournalMainFrame/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="JournalMainFrame/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="JournalLabel" type="Label" parent="JournalMainFrame/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 24.65
theme = ExtResource("1_s3mq2")
text = "Journal"
horizontal_alignment = 1

[node name="close" type="Button" parent="JournalMainFrame/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "X"

[node name="Recap" type="Control" parent="JournalMainFrame/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Quests" type="Control" parent="JournalMainFrame/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Beastiary" type="HBoxContainer" parent="JournalMainFrame/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_j8icn")
monster_codex = Array[ExtResource("4_2k6mo")]([SubResource("Resource_7w0q1"), SubResource("Resource_lwp2q"), SubResource("Resource_1ot4o")])

[node name="extra_options" type="VBoxContainer" parent="JournalMainFrame/MarginContainer/VBoxContainer/Beastiary"]
layout_mode = 2
size_flags_horizontal = 3

[node name="main" type="VBoxContainer" parent="JournalMainFrame/MarginContainer/VBoxContainer/Beastiary"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="ScrollContainer" type="ScrollContainer" parent="JournalMainFrame/MarginContainer/VBoxContainer/Beastiary/main"]
layout_mode = 2
size_flags_vertical = 3

[node name="codex_holder" type="VBoxContainer" parent="JournalMainFrame/MarginContainer/VBoxContainer/Beastiary/main/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="tab_changed" from="TabBar" to="." method="_on_tab_bar_tab_changed"]
[connection signal="pressed" from="JournalMainFrame/MarginContainer/VBoxContainer/HBoxContainer2/close" to="." method="_on_close_pressed"]
